// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`number > coerce on input 1`] = `
"{
    "$schema": "http://json-schema.org/draft-07/schema#",
    "$ref": "#/definitions/NumberSchema",
    "definitions": {
        "NumberSchema": {
            "anyOf": [
                {
                    "type": "number",
                    "minimum": 1
                },
                {
                    "type": "string"
                }
            ]
        }
    }
}"
`;

exports[`number > ignores unknown checker 1`] = `
"{
    "$schema": "http://json-schema.org/draft-07/schema#",
    "$ref": "#/definitions/NumberSchemaUnknown",
    "definitions": {
        "NumberSchemaUnknown": {
            "type": "number"
        }
    }
}"
`;

exports[`number > supports int and bounds 1`] = `
"{
    "$schema": "http://json-schema.org/draft-07/schema#",
    "$ref": "#/definitions/NumberSchema",
    "definitions": {
        "NumberSchema": {
            "type": "integer",
            "maximum": 10
        }
    }
}"
`;
